creating bin folder for future sh scripts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,7 +50,7 @@ bind-key n command-prompt 'rename-window %%'
 ################## /Key Bindings #################
 ##################################################
 
-bind-key -r i run-shell "tmux neww ~/.dotfiles/cht.sh"
+bind-key -r i run-shell "tmux neww ~/.dotfiles/bin/cht.sh"
 
 # ------------------------------------------------
 
