adding a tmux binding for start work project

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,6 +51,7 @@ bind-key n command-prompt 'rename-window %%'
 ##################################################
 
 bind-key -r i run-shell "tmux neww ~/.dotfiles/bin/cht.sh"
+bind-key -r C run-shell "tmuxinator start collective"
 
 # ------------------------------------------------
 
