--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,5 @@
+set-option -g default-shell /home/linuxbrew/.linuxbrew/bin/zsh
+
 # 256 colors
 set -g default-terminal 'tmux-256color'
 set -ga terminal-overrides ',*256col*:Tc'
