--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,8 @@ set -g default-terminal 'tmux-256color'
 set -ga terminal-overrides ',*256col*:Tc'
 
 set-option -g allow-rename off
+set-option -sg escape-time 10
+set-option -g history-limit 20000
 
 # ------------------------------------------------
 
